CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
CMAKE_POLICY(VERSION 2.8)

PROJECT(influxdb_cpp_ut)

AUX_SOURCE_DIRECTORY(. DIR_SRCS)

IF(CMAKE_SYSTEM_NAME MATCHES "Linux")
    LINK_LIBRARIES(gtest pthread)
    SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g2 -ggdb")
    SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
ENDIF()

SET(CMAKE_BUILD_TYPE "Debug")

ADD_EXECUTABLE(influxdb_cpp_ut ${DIR_SRCS})